tests/fail/tip-bağlamı.kip
Bir öğenin olasılığı
ya yokluk
ya da bir öğe varlığı olabilir.

Bir a kutusu
ya bir öğenin falanı olabilir.

Bir b kargosu
ya bir öğenin filanı olabilir.
